<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/ivFilmPhoto"
        android:layout_width="162dp"
        android:layout_height="217dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/film_poster"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFilmInfo"
        android:layout_width="151dp"
        android:layout_height="217dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"

        android:text="@string/film_info"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="48dp"

        android:text="@string/title_film_description"
        android:gravity="start|center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFilmPhoto" />

    <TextView
        android:id="@+id/tvFilmDescription"
        android:layout_width="362dp"
        android:layout_height="132dp"
        android:layout_marginTop="12dp"

        android:text="@string/film_description"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="72dp"

        android:ems="18"
        android:text="@string/rent_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilmDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>