<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="80dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: test@example.com"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Телефон: +380..."
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvRegDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/black" />

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Section Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rented_films"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <!-- Movie Rentals List -->
            <LinearLayout
                android:id="@+id/rentedMoviesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>